--- a/src/EventStore.LogV3.Tests/EventStore.LogV3.Tests.csproj
+++ b/src/EventStore.LogV3.Tests/EventStore.LogV3.Tests.csproj
@@ -3,10 +3,10 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-		<Platforms>x64</Platforms>
+		<Platforms>x64;ARM64</Platforms>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="GitHubActionsTestLogger" Version="1.2.0"/>
+		<PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
 		<PackageReference Include="ObjectLayoutInspector" Version="0.1.2" />
 		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
