--- a/src/EventStore.Transport.Tcp/EventStore.Transport.Tcp.csproj
+++ b/src/EventStore.Transport.Tcp/EventStore.Transport.Tcp.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-		<Platforms>x64</Platforms>
+		<Platforms>x64;ARM64</Platforms>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="protobuf-net" Version="2.4.0" />
