--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,7 +184,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, windows-2019]
+        architecture : [x64]
         configuration: [release]
+        include : 
+              - os : ubuntu-20.04-arm64
+                configuration: release
+                architecture : arm64
     runs-on: ${{ matrix.os }}
     name: ci/github/build-${{ matrix.os }}
     steps:
@@ -212,17 +217,19 @@ jobs:
     - name: Compile
       shell: bash
       run: |
-        dotnet build --configuration ${{ matrix.configuration }} src/EventStore.sln
+        dotnet build --configuration ${{ matrix.configuration }} -p:Platform=${{ matrix.architecture }} src/EventStore.sln
     - name: Verify Build
       shell: bash
       run: |
         dotnet run --project src/EventStore.ClusterNode --configuration ${{ matrix.configuration }} -- --insecure --what-if
     - name: Run Tests
       shell: bash
+      env:
+        TMPDIR: ${{runner.temp}}
       run: |
         find ./src -maxdepth 1 -type d -name "*.Tests"  -print0 \
           | xargs -I{} -0 -n1 bash -c \
-          'dotnet test --configuration ${{ matrix.configuration }} --blame --blame-hang-timeout 5min --blame-hang-dump-type mini --settings ./ci/ci.runsettings --logger:"GitHubActions;report-warnings=false" --logger:html --logger:trx --logger:"console;verbosity=normal" --results-directory=$(pwd)/test-results/$1 $1' - '{}'
+          'dotnet test --configuration ${{ matrix.configuration }} -p:Platform=${{ matrix.architecture }}  --blame --blame-hang-timeout 5min --blame-hang-dump-type mini --settings ./ci/ci.runsettings --logger:"GitHubActions;report-warnings=false" --logger:html --logger:trx --logger:"console;verbosity=normal" --results-directory=$(pwd)/test-results/$1 $1' - '{}'
     - name: Collect Test Results
       shell: bash
       if: always()
