--- a/src/EventStore.Core/EventStore.Core.csproj
+++ b/src/EventStore.Core/EventStore.Core.csproj
@@ -73,5 +73,8 @@
 		<Protobuf Include="..\Protos\Grpc\monitoring.proto" GrpcServices="Server" LinkBase="Services/Transport/Grpc" ProtoRoot="../Protos/Grpc" Access="Internal">
 			<Link>Services\Transport\Grpc\Protos\monitoring.proto</Link>
 		</Protobuf>
+		<Protobuf Include="..\Protos\Grpc\featurediscovery.proto" GrpcServices="Server" LinkBase="Services/Transport/Grpc" ProtoRoot="../Protos/Grpc" Access="Internal">
+			<Link>Services\Transport\Grpc\Protos\featurediscovery.proto</Link>
+		</Protobuf>
 	</ItemGroup>
 </Project>
